@@ -340,21 +340,21 @@ Notes:
 -----------------------------------------------------------------------
 Compiler:                       Visual C++ 2005 Beta2 Version 8.0.50215-4400
 -----------------------------------------------------------------------
-Date:                           2005-06-28
+Date:                           2005-08-08
 STLP Version:                   current CVS STLPORT_5_0 branch
 Reporter:                       dums (Francois Dumont)
-Status (release-shared):        All pass (326 tests)
+Status (release-shared):        All pass (327 tests)
 Notes:
 Status (dbg-shared):            Runtime fail
 Notes:                          Microsoft do not grant the msvcp80d.dll file
                                 in their free package.
 Status (stldbg-shared):         Idem dbg-shared.
 Notes:
-Status (release-static):        All pass (326 tests)
+Status (release-static):        All pass (327 tests)
 Notes:
-Status (dbg-static):            All pass (326 tests)
+Status (dbg-static):            All pass (327 tests)
 Notes:
-Status (stldbg-static):         All pass (326 tests)
+Status (stldbg-static):         All pass (327 tests)
 Notes:
 
 -----------------------------------------------------------------------
